# chmethod_lab2

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.c
src/app/: app.c  app.h  console_output.h
src/app/task_6_3/: task_6_3.c  task_6_3.h
src/app/task_6_4/: task_6_4.c  task_6_4.h
src/app/task_6_5/: task_6_5.c  task_6_5.h
